# Robot

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeUserPresets.json  GVL.h  GlobalParameter.cpp  GlobalParameter.hpp  README.md  Robot.cpp  SceneSelectionWindow.cpp  SceneSelectionWindow.hpp  SceneSelectionWindow.ui  config.yaml  deploy.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  zip.py
HMI/: SceneSelectionWindow.cpp  SceneSelectionWindow.hpp  SceneSelectionWindow.ui
Task/: ConfigManager.cpp  ConfigManager.hpp  GlobalParameter.cpp  GlobalParameter.hpp  Measure.cpp  Measure.h  PDTask.cpp  PDTask.h  StateMachine.cpp  StateMachine.h  Task.cpp  Task.h  TaskExternal.cpp  TaskExternal.h  TaskExternal.hpp  TaskParameter.h  manual.h
com/: BoardingTool.cpp  BoardingTool.h  ComInterface.cpp  ComInterface.h  ComInterface.h.bak  IOCom.cpp  IOCom.cpp.bak  IOCom.h  IOCom.h.bak  LaserDistanceBojke.cpp  LaserDistanceBojke.h  Manual.cpp  Manual.cpp.bak  Manual.h  Manual.h.bak  ManualExternal.cpp  ManualProtocol.h  RobotCom.cpp  RobotCom.h  SerialCom.cpp  SerialCom.h  TcpCom.cpp  TcpCom.cpp.bak  TcpCom.h  TcpCom_IO.cpp  TcpCom_IO.h  Tools.cpp  Tools.h
configuration/: config_ro.yaml  config_rw.yaml  help.html
configurations/: config_ro.yaml  config_rw.yaml
enc_temp_folder/51c3874da9fd5afcdf7b2d51c98916/: config.yaml
models/: mlsd_model_tiny_20240721.onnx  mlsd_model_tiny_20240906.onnx  mlsd_model_tiny_20241011.onnx  mlsd_model_tiny_finue.onnx
robot/: Axis.h  DataStruct.h  ErrCode.h  GeneralRobot.h  Link.h  LinkObject.h  NewParameter.hpp  Parameter.h  RobotKinectModel.cpp  RobotKinectModel.h  RobotModuleServices.h  Transformation.cpp  Transformation.h  robot.cpp  robot.h
scripts/: analyze.py  deploy.py  get_path.py  ignore_items.py  zip.py
src/: GVL.h  Robot.cpp
src/Com/: ComInterface.h  IOCom.h  ManualExternal.cpp  RobotCom.h  SerialCom.h  TcpCom.cpp  TcpCom.h  TcpCom_IO.h  Tools.cpp
src/HMI/: SceneSelectionWindow.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Network/: TcpClient.cpp  TcpClient.hpp
src/Robot/: Axis.h  DataStruct.h  Parameter.h  RobotKinectModel.cpp  RobotKinectModel.h  RobotModuleServices.h  Transformation.h  robot.cpp  robot.h
src/Task/: ConfigManager.cpp  ConfigManager.hpp  GlobalParameter.cpp  GlobalParameter.hpp  Measure.cpp  Measure.h  Task.cpp  Task.h  TaskExternal.cpp  TaskExternal.h  TaskExternal.hpp
src/Vision/: CameraManager.cpp  CameraManager.h  HKCameraControls.cpp  LineDetector.cpp  LineDetectorRunner.h  LineSegmenationBaseTensorRT.cpp  MvCamera.cpp  Parameters.h  ShareData.h  VisionInterface.h  mlsd.h  myequeue.h  utils.cpp  utils.h
src/com/: ComInterface.cpp  ComInterface.h  IOCom.cpp  Manual.h  ManualExternal.cpp  ManualProtocol.h  RobotCom.cpp  SerialCom.cpp  SerialCom.h  TcpCom_IO.cpp
src/infer/: common.cpp  common.hpp  onnxruntime.cpp  onnxruntime.hpp  tensorrt.cpp  tensorrt.hpp
src/net/: tcp_common.cpp  tcp_common.hpp
src/robot/: Axis.h  DataStruct.h  ErrCode.h  Link.h  NewParameter.hpp  Parameter.h  RobotKinectModel.h  robot.cpp  robot.h
src/test/: test.cpp  test.hpp
src/utils/: BoardTool.hpp  Camera.hpp  Manual.hpp  PointLaser.hpp  Serial.hpp  Sql.hpp  basic_header.hpp  board_tools.cpp  board_tools.hpp
src/vision/: CameraManager.cpp  CameraManager.h  HKCameraControls.cpp  HKCameraControls.h  LaserScanerControls.h  LidarHandler.cpp  LidarHandler.h  LidarHelper.cpp  LidarHelper.h  LineDetector.cpp  LineDetectorRunner.cpp  LineDetectorRunner.h  LineSegmenationBase.cpp  LineSegmenationBaseTensorRT.cpp  LineSegmenationBaseTensorRT.h  MvCamera.cpp  MvCamera.h  MyBestfitLaserScaner.cpp  MyBestfitLaserScaner.h  ShareData.h  VisionInterface.cpp  VisionInterface.h  mlsd.cpp  utils.cpp  utils.h
vision/: Camera.cpp  Camera.h  CameraCalibrationLine.cpp  CameraCalibrationLine.h  CameraControls.cpp  CameraControls.h  CameraDisplay.cpp  CameraDisplay.h  CameraManager.cpp  CameraManager.h  FFmpegCamera.cpp  FFmpegCamera.h  Gocator.cpp  Gocator.h  GocatorControls.cpp  GocatorControls.h  HKCameraControls.cpp  HKCameraControls.h  HoleHandler.cpp  HoleHandler.h  HoleHelper.cpp  HoleHelper.h  LaserScanerControls.cpp  LaserScanerControls.h  LidarHandler.cpp  LidarHandler.h  LidarHelper.cpp  LidarHelper.h  LineDetector.cpp  LineDetector.h  LineDetectorRunner.cpp  LineDetectorRunner.h  LineHandler.cpp  LineHandler.h  LineHelper.cpp  LineHelper.h  LineSegmenationBase.cpp  LineSegmenationBase.h  LineSegmenationBaseTensorRT.cpp  LineSegmenationBaseTensorRT.h  (+16 more)
